--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "license": "MIT",
   "homepage": "https://github.com/Esquiafo/DarkMode",
   "dependencies": {
-    "@fluentui/react-components": "^9.12.0",
+    "@heroicons/react": "^2.0.14",
     "@next/font": "13.1.5",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "18.11.18",
@@ -28,6 +28,8 @@
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
     "flowbite": "^1.6.3",
+    "flowbite-react": "^0.3.8",
+    "init": "^0.1.2",
     "jest": "^29.4.0",
     "next": "13.1.5",
     "next-themes": "^0.2.1",
